--- a/src/app/admisiones/admision/admision.component.html
+++ b/src/app/admisiones/admision/admision.component.html
@@ -237,7 +237,7 @@
             </table>
           </div>
         </div>
-        
+
         <div class="row mt-4">
           <div class="col-md-6">
             <h6>Datos del Paciente</h6>
@@ -287,7 +287,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <label for="">Fecha</label>
-                  <input type="text" class="form-control form-control-sm">
+                  <input type="time" class="form-control form-control-sm">
                 </div>
                 <div class="col-md-6">
                   <label for="">No Factura</label>
