--- a/src/app/procedimientos/colposcopia/colposcopia.component.html
+++ b/src/app/procedimientos/colposcopia/colposcopia.component.html
@@ -216,8 +216,144 @@
   <div class="container-fluid py-1">
     <div class="row ">
       <div class="card">
+
+        <table class="table table-striped table-hover mt-3">
+          <thead>
+            <tr class="bg-default">
+              <th class="text-xs text-white">OPCIONES</th>
+              <th class="text-xs text-white">INFORME</th>
+              <th class="text-xs text-white">PACIENTE</th>
+              <th class="text-xs text-white">FECHA</th>
+              <th class="text-xs text-white">MEDICO</th>
+              <th class="text-xs text-white">IMAGENES</th>
+            </tr>
+          </thead>
+
+          <tbody>
+
+          </tbody>
+        </table>
+        <div class="row mt-3">
+          <div class="col-md-12">
+            <h5>CREAR COLPOSCOPIA</h5>
+          </div>
+        </div>
+        <div class="row mt-1">
+          <div class="col-md-6">
+            <label>DNI</label>
+            <input type="text" class="form-control">
+          </div>
+          <div class="col-md-6">
+            <label>Nombre</label>
+            <input type="text" class="form-control">
+          </div>
+        </div>
+
+          <div class="row mt-1">
+            <div class="col-md-6">
+              <label>Fecha</label>
+              <input type="date" class="form-control">
+            </div>
+            <div class="col-md-6">
+              <label>Medico</label>
+              <input type="text" class="form-control">
+            </div>
+          </div>
+
+        <div class="row mt-3">
+          <div class="col-md-4">
+            <label>U.escamo columnar</label>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Seleccione una opcion</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <label>Endo cervix</label>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Seleccione una opcion</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <label>Vagina</label>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Seleccione una opcion</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row mt-3">
+          <div class="col-md-4">
+            <label>Vulva</label>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Seleccione una opcion</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <label>Perineo</label>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Seleccione una opcion</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+            <label>Region Parianal</label>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Seleccione una opcion</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row mt-3">
+          <div class="col-md-6">
+            <label> Biopsia</label>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Seleccione una opcion</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <label> Papanicolaou</label>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>Seleccione una opcion</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row mt-3">
+          <div class="col-md-6">
+            <label>Conclusiones</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <div class="col-md-6">
+            <label>Seleccione las imagenes</label>
+            <input class="form-control form-control-sm" id="formFileSm" type="file">
+            <input class="form-control form-control-sm mt-4" id="formFileSm" type="file">
+          </div>
+        </div>
         <br>
-        <!-- CONTENIDO  -->
+
       </div>
     </div>
   </div>
