--- a/src/app/ecografias/ecografia/ecografia.component.html
+++ b/src/app/ecografias/ecografia/ecografia.component.html
@@ -1,4 +1,4 @@
-* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *  *
+<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *  * -->
 <!-- * * * * * * * * * * * JERSON GALVEZ ENSUNCHO * * * * * * * * * * * -->
 <!-- ******* * * * * * * * PROYECTO CLINICSOFT * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
@@ -174,9 +174,9 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
           <li class="breadcrumb-item text-sm"><a class="opacity-5 text-white" href="javascript:;">Administración</a></li>
-          <li class="breadcrumb-item text-sm text-white active" aria-current="page">Triage</li>
+          <li class="breadcrumb-item text-sm text-white active" aria-current="page">Ecografias</li>
         </ol>
-        <h6 class="font-weight-bolder text-white mb-0">Triage</h6>
+        <h6 class="font-weight-bolder text-white mb-0">Ecografias</h6>
       </nav>
       <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
         <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -214,165 +214,87 @@
     </div>
   </nav>
   <div class="container-fluid py-1">
-    <div class="row">
+    <div class="row ">
       <div class="card">
-        <div class="container-fluid">
+        <div class="container-fluid mt-2">
           <div class="row">
-            <div class="col-md-8">
-              <table class="table table-striped table-hover mt-3">
+            <div class="col-md-7">
+              <table class="table table-striped table-hover">
                 <thead>
                   <tr class="bg-default">
                     <th class="text-xs text-white"></th>
+                    <th class="text-xs text-white">#</th>
+                    <th class="text-xs text-white">ECOGRAFIA</th>
+                    <th class="text-xs text-white">FECHA</th>
                     <th class="text-xs text-white">ESTADO</th>
-                    <th class="text-xs text-white">DNI</th>
-                    <th class="text-xs text-white">PACIENTE</th>
-                    <th class="text-xs text-white">DOCTOR</th>
-                    <th class="text-xs text-white">ESPECIALIDAD</th>
-                    <th class="text-xs text-white">COSTO</th>
-                  </tr>
+                    <th class="text-xs text-white">PDF</th>
+                   </tr>
                 </thead>
                 <tbody>
 
                 </tbody>
               </table>
             </div>
-            <div class="col-md-4">
-              <form [formGroup]="triageForm">
-              <div class="row mt-2">
-                <div class="col-md-6">
-                  <label for="">DNI</label>
+            <div class="col-md-5">
+              <div class="row">
+                <div class="col-md-5">
+                  <label>DNI</label>
                   <input
                     type="text"
-                    class="form-control"
-                    formControlName="dni_triage"
-                    [(ngModel)]="dni_triage"
+                    class="form-control form-control-sm"
                   >
                 </div>
-                <div class="col-md-6">
-                  <label for="">Paciente</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="paciente_triage"
-                    [(ngModel)]="paciente_triage"
+                <div class="col-md-7">
+                    <label>Nombre Paciente</label>
+                    <input
+                      type="text"
+                      class="form-control form-control-sm"
+                    >
+                  </div>
+              </div>
+              <div class="row mt-1">
+                <div class="col-md-8">
+                  <label>Tipo Ecografia</label>
+                  <select
+                    class="form-control form-control-sm"
                   >
+                    <option value="">Seleccione una opcion</option>
+                    <option value="">Ecografia de mama</option>
+                    <option value="">Ecografia transvaginal</option>
+                    <option value="">Ecografia pelvica</option>
+                    <option value="">Ecografia morfologica</option>
+                    <option value="">Ecografia genetica</option>
+                    <option value="">Ecografia obstetrica</option>
+                  </select>
                 </div>
-                <div class="col-md-6">
-                  <label for="">Edad</label>
+                <div class="col-md-4">
+                  <label>Fecha</label>
                   <input
-                    type="text"
-                    class="form-control"
-                    formControlName="edad_triage"
-                    [(ngModel)]="edad_triage"
+                     type="date"
+                    class="form-control form-control-sm"
                   >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Doctor</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="doctor_triage"
-                    [(ngModel)]="doctor_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Especialidad</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="especialidad_triage"
-                    [(ngModel)]="especialidad_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Presion arterial(mmHg)</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="presion_triage"
-                    [(ngModel)]="presion_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Temperatura (C)</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="temperatura_triage"
-                    [(ngModel)]="temperatura_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Frecuencia Respiratoria</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="frecuenciar_triage"
-                    [(ngModel)]="frecuenciar_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Frecuencia cardiaca</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="frecuenciac_triage"
-                    [(ngModel)]="frecuenciac_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Saturaciòn O2</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="saturacion_triage"
-                    [(ngModel)]="saturacion_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Peso (kg)</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="peso_triage"
-                    [(ngModel)]="peso_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Talla (cm)</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="talla_triage"
-                    [(ngModel)]="talla_triage"
-                  >
-                </div>
-                <div class="col-md-12">
-                  <label for="">Imc</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    formControlName="imc_triage"
-                    [(ngModel)]="imc_triage"
-                  >
-                  <button
-                    class="btn btn-success mt-3"
-                    type="button"
-                  >
-                    Guardar
-                  </button>
-                  <button
-                    class="btn btn-danger mt-3 mx-2"
-                    type="button"
-                  >
-                    Pasar
-                  </button>
                 </div>
               </div>
-            </form>
+              
+              <div class="row mt-1">
+                <div class="col-md-12">
+                  <label>Observación</label>
+                  <textarea
+                    class="form-control form-control-sm"
+                  ></textarea>
+                </div>
+              </div>
+              <div class="row mt-1">
+                <div class="col-md-2">
+                  <button class="btn btn-primary btn-xs mt-2">Documento</button>
+                </div>
+              </div>
+              <br>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+</div>
+
+
