--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -78,7 +78,7 @@
        <div class="collapse " id="inventarios">
           <ul class="nav nav-sm flex-column">
             <li class="nav-item">
-              <a class="nav-link " href="#">
+              <a class="nav-link " routerLink="/productos">
                <span class="sidenav-normal">Productos</span>
               </a>
             </li>
@@ -115,7 +115,7 @@
           </ul>
        </div>
       </li>
-      
+
       <li class="nav-item ">
        <a class="nav-link " data-bs-toggle="collapse" aria-expanded="false" href="#contable">
        <i class="fas fa-money-bill"></i>
@@ -147,7 +147,7 @@
           <span>Reportes</span>
         </a>
       </li>
-      
+
       <li class="nav-item">
        <a class="nav-link">
          <i class="fas fa-pills"></i>
